# argonautai

./: .pre-commit-config.yaml  pyproject.toml
src/argonautai/: deploy.py  git.py  kustomize.py
tests/: test_git.py  test_kustomize.py
tests/kustomize/workflow/base/: kustomization.yaml  workflow.yaml
tests/kustomize/workflow/overlays/dev/: kustomization.yaml  patch.yaml
