[tool.poetry]
name = "argonautai"
version = "0.1.0"
description = "An Argo workflows deploy utility tool for me."
authors = ["nagomiso <daiseigi.giants+github@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
